@@ -2,6 +2,7 @@ package poly.edu.sneaker.Controller;
 
 
 import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
 import jakarta.servlet.http.HttpSession;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -55,6 +56,7 @@ public class GioHangController {
     private VnPay vnPay;
     @Autowired
     KhachHangService khachHangService;
+
     public String getCurrentUserEmail() {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (authentication != null && authentication.isAuthenticated()) {
@@ -66,91 +68,112 @@ public class GioHangController {
 
     @GetMapping("/tim-giam-gia")
     @ResponseBody
-    public ResponseEntity<Map<String,Object>> timGiamGia(@RequestParam("maKhuyenMai")String maKhuyenMai){
-        Map<String,Object> response = new HashMap<>();
-        KhuyenMai khuyenMai = khuyenMaiService.findByMaKhuyenMai(maKhuyenMai);
-        if(khuyenMai!=null){
-            response.put("khuyenMai",khuyenMai);
-            return ResponseEntity.ok(response);
-        }
-        response.put("message","Mã giảm giá không tồn tại");
-        return ResponseEntity.badRequest().body(response);
-    }
-    @PostMapping("/ma-giam-gia")
-    @ResponseBody
-    public ResponseEntity<Map<String, Object>> layMaGiamGia(@RequestBody Map<String, String> request) {
+    public ResponseEntity<Map<String, Object>> timGiamGia(@RequestParam("maKhuyenMai") String maKhuyenMai) {
         Map<String, Object> response = new HashMap<>();
-
-        String maKm = request.get("maKhuyenMai");
-        if (maKm == null || maKm.isEmpty()) {
-            response.put("message", "Mã khuyến mãi không hợp lệ");
-            return ResponseEntity.badRequest().body(response);
-        }
-        double tongTien;
-        try {
-            tongTien = Double.parseDouble(request.get("totalPrice"));
-        } catch (NumberFormatException | NullPointerException e) {
-            response.put("message", "Tổng tiền không hợp lệ");
-            return ResponseEntity.badRequest().body(response);
-        }
-
-        KhuyenMai khuyenMai = khuyenMaiService.findByMaKm(maKm);
+        KhuyenMai khuyenMai = khuyenMaiService.findByMaKhuyenMai(maKhuyenMai);
         if (khuyenMai != null) {
-            if(khuyenMai.getDieuKienApDung()>tongTien){
-                response.put("message","Đơn hàng chưa đủ điều kiện dùng mã giảm giá");
+            if (khuyenMai.getNgayKetThuc().before(new Date())) {
+                khuyenMai.setTrangThai(false);
+                khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
+                response.put("message", "Mã khuyến mãi không còn hoạt động");
                 return ResponseEntity.badRequest().body(response);
             }
-            double giaGiam;
-            if (khuyenMai.getLoaiKhuyenMai()) { // Giảm giá theo số tiền
-                giaGiam = khuyenMai.getGiaTriGiam();
-            } else { // Giảm giá theo %
-                double giamGiaPhanTram = (tongTien * khuyenMai.getGiaTriGiam()) / 100;
-                giaGiam = Math.min(giamGiaPhanTram, khuyenMai.getMucGiamGiaToiDa()); // Không vượt quá mức giảm tối đa
+            if (khuyenMai.getTrangThai() || khuyenMai.getSoLuong() - khuyenMai.getDaSuDung() > 0) {
+                response.put("khuyenMai", khuyenMai);
+                return ResponseEntity.ok(response);
             }
-
-            response.put("message", "Thêm mã khuyến mãi thành công");
-            response.put("giaGiam", giaGiam);
-            return ResponseEntity.ok(response);
+            response.put("message", "Mã giảm giá không còn hoạt động");
+            return ResponseEntity.badRequest().body(response);
         }
-
-        response.put("message", "Mã khuyến mãi không tồn tại");
+        response.put("message", "Mã giảm giá không tồn tại");
         return ResponseEntity.badRequest().body(response);
     }
 
+    //Thanh toán khi nhận hàng
     @PostMapping("/thanh-toan")
     @ResponseBody
     public ResponseEntity<?> thanhToanOnline(@RequestBody Map<String, Object> sanPhamThanhToan) {
-
-
         KhachHang khachHang = khachHangService.findByEmail(getCurrentUserEmail());
         GioHang gioHang = gioHangService.findGioHangByIDKH(khachHang.getId());
         try {
             if (sanPhamThanhToan == null) {
                 return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Dữ liệu không hợp lệ"));
             }
-
-            if (sanPhamThanhToan == null || !sanPhamThanhToan.containsKey("selectedItems")) {
+            if (sanPhamThanhToan.get("selectedIds") == null) {
                 return ResponseEntity.badRequest().body(Map.of("message", "Sản phẩm không hợp lệ"));
             }
+            Object selectedIdsRaw = sanPhamThanhToan.get("selectedIds");
+            List<Integer> idGHCT = new ArrayList<>();
+            if (selectedIdsRaw instanceof List<?>) {
+                for (Object idObj : (List<?>) selectedIdsRaw) {
+                    try {
+                        idGHCT.add(Integer.parseInt(idObj.toString()));
+                    } catch (NumberFormatException e) {
+                        return ResponseEntity.badRequest().body(Map.of("message", "ID sản phẩm không hợp lệ"));
+                    }
+                }
+            } else {
+                return ResponseEntity.badRequest().body(Map.of("message", "Dữ liệu selectedIds không hợp lệ"));
+            }
+            if (idGHCT.size() == 0) {
+                return ResponseEntity.badRequest().body((Map.of("message", "Sản phẩm không còn trong giỏ hàng")));
+            }
+            List<GioHangChiTiet> lstGioHangChiTiet = new ArrayList<>();
+            for (Integer id : idGHCT) {
+                lstGioHangChiTiet.add(gioHangChiTietService.findById(id));
+            }
+            if (lstGioHangChiTiet.size() == 0) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Chưa chọn sản phẩm","size",lstGioHangChiTiet.size()));
+            }
+            //Kiểm tra giá của sản phẩm có thay đổi không
+            boolean isChaged = false;
+            //kiểm tra trạng thái giỏ hàng có còn giỏ hàng true không
+
+            StringBuilder thayDoi = new StringBuilder();
+            for (GioHangChiTiet gh : lstGioHangChiTiet) {
+                if (Math.abs(gh.getIdChiTietSanPham().getGiaBan() - gh.getDonGia()) > 0.001f) {
+                    thayDoi.append("").append(gh.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
+                    isChaged = true;
+                } else if (gh.getSoLuong() > gh.getIdChiTietSanPham().getSoLuong()) {
+                    thayDoi.append("").append(gh.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
+                    isChaged = true;
+                }
+            }
+            if (isChaged) {
+                tinhLaiGiaTien(gioHang);
+            }
+
+            if (!thayDoi.toString().isBlank()) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Sản phẩm " + thayDoi.toString() + "có thay đổi thay đổi"));
+            }
+            float tongTien = (float) lstGioHangChiTiet.stream().filter(item -> item.getTrangThai() && item.getIdChiTietSanPham().getTrangThai() && item.getIdChiTietSanPham().getIdSanPham().getTrangThai()).mapToDouble(GioHangChiTiet::getTongTien).sum();
+            if (tongTien > 20000000) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Đơn hàng vượt quá 20 triệu"));
+            }
             float tongTienGiam = 0;
-            KhuyenMai khuyenMai =null;
-
-
-
+            KhuyenMai khuyenMai = null;
             // Tạo hóa đơn mới
             HoaDon hoaDon = new HoaDon();
             hoaDon.setMaHoaDon(hoaDonService.taoMaHoaDon());
-            if(gioHang.getIdKhuyenMai()!=null){
-                khuyenMai= khuyenMaiService.findById(gioHang.getIdKhuyenMai().getId());
-                if(khuyenMai!=null){
-                    if(sanPhamThanhToan.get("giamGia")!=null){
-                        tongTienGiam = Float.parseFloat((String) sanPhamThanhToan.get("giamGia"));
+            if (gioHang.getIdKhuyenMai() != null) {
+                khuyenMai = khuyenMaiService.findById(gioHang.getIdKhuyenMai().getId());
+                if (khuyenMai != null) {
+                    int checkKM = checkKhuyenMai(khuyenMai);
+                    if (checkKM == 1 || checkKM == 4) {
+                        return ResponseEntity.badRequest().body(Map.of("message", "Mã khuyến mãi không còn hoạt động"));
+                    } else if (checkKM == 2) {
+                        return ResponseEntity.badRequest().body(Map.of("message", "Mã khuyến mãi đã được sử dụng hết"));
+                    }
+                    if (khuyenMai.getLoaiKhuyenMai()) { // Giảm giá theo số tiền
+                        tongTienGiam = khuyenMai.getGiaTriGiam();
+                    } else { // Giảm giá theo %
+                        double giamGiaPhanTram = (tongTien * khuyenMai.getGiaTriGiam()) / 100;
+                        tongTienGiam = (float) Math.min(giamGiaPhanTram, khuyenMai.getMucGiamGiaToiDa()); // Không vượt quá mức giảm tối đa
                     }
                     hoaDon.setIdKhuyenMai(khuyenMai);
                 }
             }
 
-            System.out.println(sanPhamThanhToan);
             hoaDon.setIdKhachHang(khachHang);
             hoaDon.setTenNguoiNhan((String) sanPhamThanhToan.get("hoVaTen"));
             hoaDon.setSdtNguoiNhan((String) sanPhamThanhToan.get("soDienThoai"));
@@ -167,8 +190,8 @@ public class GioHangController {
             // Kiểm tra và parse giá trị float an toàn
             try {
                 hoaDon.setPhiShip(Float.parseFloat(sanPhamThanhToan.get("tienShip").toString()));
-                hoaDon.setTongTien(Float.parseFloat(sanPhamThanhToan.get("tongTien").toString()));
-                hoaDon.setThanhTien(Float.parseFloat(sanPhamThanhToan.get("thanhTien").toString()));
+                hoaDon.setTongTien(tongTien);
+                hoaDon.setThanhTien(tongTien - tongTienGiam);
             } catch (NumberFormatException e) {
                 return ResponseEntity.badRequest().body("Lỗi định dạng số tiền");
             }
@@ -177,32 +200,21 @@ public class GioHangController {
             hoaDon.setLoaiHoaDon(true);
             hoaDon.setLoaiThanhToan(true);
             hoaDon.setTrangThai(2);
+            hoaDon.setGhiChu("Mua hàng ngày " + new Date() + " thanh toán khi nhận hàng");
             // Lưu hóa đơn vào database
             hoaDonService.save(hoaDon);
-            if(khuyenMai!=null){
-                khuyenMai.setDaSuDung(khuyenMai.getDaSuDung()+1);
-                khuyenMaiService.updateKhuyenMai(khuyenMai,khuyenMai.getId());
-            }
             //Cập nhật số lượng khuyến mại sau khi khách hàng thanh toán
+            khuyenMai.setDaSuDung(khuyenMai.getDaSuDung() + 1);
+            khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
+            //Cập nhật thông tin vao lich su don hang
             TrangThaiDonHang trangThaiDonHang = new TrangThaiDonHang();
             trangThaiDonHang.setTrangThai(hoaDon.getTrangThai());
-            trangThaiDonHang.setGhiChu("Chờ xác nhận");
+            trangThaiDonHang.setGhiChu("Thanh toán khi nhận hàng - Chờ xác nhận");
             trangThaiDonHang.setIdHoaDon(hoaDon);
             trangThaiDonHang.setNgayCapNhat(new Date());
             lichSuTrnngThaiService.saveLichSuTrangThai(trangThaiDonHang);
             // Lấy danh sách sản phẩm trong giỏ hàng
-            List<Integer> idCTGH = (List<Integer>) sanPhamThanhToan.get("selectedItems");
-            System.out.println(idCTGH.get(0).toString());
-            if (idCTGH == null || idCTGH.isEmpty()) {
-                return ResponseEntity.badRequest().body("Danh sách sản phẩm trống!");
-            }
-            for (Integer idGioHangChiTiet : idCTGH) {
-                GioHangChiTiet ghct = gioHangChiTietService.findById(idGioHangChiTiet);
-                System.out.println(ghct.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
-                if (ghct == null) {
-                    return ResponseEntity.badRequest().body("Sản phẩm không tồn tại trong giỏ hàng!");
-                }
-                // Tạo hóa đơn chi tiết từ giỏ hàng chi tiết
+            for (GioHangChiTiet ghct : lstGioHangChiTiet) {
                 HoaDonChiTiet hoaDonChiTiet = new HoaDonChiTiet();
                 hoaDonChiTiet.setIdHoaDon(hoaDonService.findById(hoaDon.getId()));
                 hoaDonChiTiet.setSoLuong(ghct.getSoLuong());
@@ -211,44 +223,77 @@ public class GioHangController {
                 hoaDonChiTiet.setDonGia(ghct.getDonGia());
                 hoaDonChiTiet.setNgayTao(new Date());
                 hoaDonChiTiet.setTrangThai(2);
-
                 // Lưu chi tiết hóa đơn từ giỏ hàng chi tiết
                 hoaDonChiTietService.saveHoaDonChiTiet(hoaDonChiTiet);
                 //Xóa giỏ hàng chi tiết khi thanh toán thành công
                 gioHangChiTietService.deleteGioHangChitiet(ghct.getId());
-
             }
-
-            return ResponseEntity.ok(Map.of("message","Đặt hàng thành công","redirectUrl","/gio-hang/checkout-success"));
+            return ResponseEntity.ok(Map.of("message", "Đặt hàng thành công", "redirectUrl", "/gio-hang/checkout-success"));
 
         } catch (Exception e) {
-            System.out.println(e.getMessage());
-            return ResponseEntity.badRequest().body("Lỗi khi thanh toán: " + e.getMessage());
+            return ResponseEntity.badRequest().body("Thanh toán thất bại");
         }
     }
 
 
-
     @GetMapping("/vnpay-return")
-    public RedirectView vnpayReturn(HttpServletRequest request) {
+    public ResponseEntity<?> vnpayReturn(HttpServletRequest request) {
         // Kiểm tra tính hợp lệ của giao dịch
-        int paymentStatus = vnPay.orderReturn(request);
-
-        if (paymentStatus == 1) {
-            Map<String, Object> giaoDich = (Map<String, Object>) httpSession.getAttribute("giaoDichTam");
-            if (giaoDich == null) {
-                return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
-
+        // Lấy thông tin khách hàng
+        KhachHang khachHang = khachHangService.findByEmail(getCurrentUserEmail());
+        GioHang gioHang = gioHangService.findGioHangByIDKH(khachHang.getId());
+        Map<String, Object> giaoDich = (Map<String, Object>) httpSession.getAttribute("giaoDichTam");
+        if (giaoDich == null) {
+            // Xóa session sau khi giao dịch hoàn tất
+            httpSession.removeAttribute("giaoDichTam");
+            httpSession.removeAttribute("khachHangSession");
+            return ResponseEntity.badRequest().body(Map.of("message","Thanh toán không thành công"));
+        }
+        //Toan bo gio hang chi tiet
+        List<GioHangChiTiet> lstGioHangThucTe = gioHangChiTietService.findByIdGioHang(gioHang.getId());
+        //Gio hang chi tiet duoc lay de thanh toan
+        List<GioHangChiTiet> lstGioHangChiTiet = (List<GioHangChiTiet>) giaoDich.get("lstGioHangChiTiet");
+        if (lstGioHangChiTiet == null || lstGioHangChiTiet.isEmpty()) {
+            return ResponseEntity.badRequest().body(Map.of("message","Không tồn tại sản phẩm trong giỏ hàng"));
+        }
+        boolean isChaged = false;
+        StringBuilder thayDoi = new StringBuilder();
+        for (GioHangChiTiet ghtt : lstGioHangThucTe) {
+            for (GioHangChiTiet gh : lstGioHangChiTiet) {
+                if (ghtt.getId() == gh.getId()) {
+                    if (Math.abs(ghtt.getIdChiTietSanPham().getGiaBan() - ghtt.getDonGia()) > 0.001f) {
+                        thayDoi.append("").append(ghtt.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
+                        isChaged = true;
+                    } else if (ghtt.getSoLuong()>ghtt.getIdChiTietSanPham().getSoLuong()) {
+                        thayDoi.append(" ").append(ghtt.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
+                        isChaged = true;
+                    }
+                }
             }
+        }
+        if (isChaged) {
+            // Cập nhật lại thông tin giỏ hàng và thông báo người dùng
+            tinhLaiGiaTien(gioHang);
+            // Xóa giao dịch tạm nếu muốn reset
+            httpSession.removeAttribute("giaoDichTam");
+            httpSession.removeAttribute("khachHangSession");
+            // Có thể thêm flash attribute hoặc query param để thông báo lý do
+            return ResponseEntity.badRequest().body(Map.of("message","Sản phẩm "+thayDoi+"thay đổi giá hoặc không còn hoạt động"));
+        }
 
-            // Lấy thông tin khách hàng
-            KhachHang khachHang = khachHangService.findByEmail(getCurrentUserEmail());
-
-            // Lấy ID khuyến mãi an toàn
-            Object idKhuyenMaiObj = giaoDich.get("idKhuyenMai");
-            Integer idKhuyenMai = (idKhuyenMaiObj != null) ? Integer.parseInt(idKhuyenMaiObj.toString()) : null;
+        int paymentStatus = vnPay.orderReturn(request);
+        if (paymentStatus == 1) {
+            // Lấy danh sách sản phẩm
+            Integer idKhuyenMai = (gioHang.getIdKhuyenMai() != null) ? gioHang.getIdKhuyenMai().getId() : null;
             KhuyenMai khuyenMai = (idKhuyenMai != null) ? khuyenMaiService.findById(idKhuyenMai) : null;
-
+            int checkKM =checkKhuyenMai(khuyenMai);
+            if(checkKM == 1||checkKM == 4){
+                //khuyen mai khong con hoat dong
+                return ResponseEntity.badRequest().body(Map.of("message","Mã khuyến mãi không còn hoạt động"));
+            }else if(checkKM==2){
+                //khuyen mai da duoc su dung het
+                return ResponseEntity.badRequest().body(Map.of("message","Mã khuyến mãi đã được sử dụng hết"));
+            }
             // Tạo hóa đơn mới
             HoaDon hoaDon = new HoaDon();
             hoaDon.setMaHoaDon((String) giaoDich.get("maHoaDon"));
@@ -262,84 +307,67 @@ public class GioHangController {
             hoaDon.setPhuongXa((String) giaoDich.get("ward"));
             hoaDon.setDiaChiChiTiet((String) giaoDich.get("diaChiCuThe"));
             hoaDon.setGhiChu((String) giaoDich.get("ghiChu"));
-
             try {
                 hoaDon.setTienKhachDua(Float.parseFloat(giaoDich.get("thanhTien").toString()));
                 hoaDon.setPhiShip(Float.parseFloat(giaoDich.get("tienShip").toString()));
                 hoaDon.setTongTien(Float.parseFloat(giaoDich.get("tongTien").toString()));
                 hoaDon.setTongTienGiam(Float.parseFloat(giaoDich.get("tongTienGiam").toString()));
-                hoaDon.setThanhTien(hoaDon.getTongTien() - hoaDon.getTongTienGiam());
+                hoaDon.setThanhTien(Float.parseFloat(giaoDich.get("thanhTien").toString()));
             } catch (NumberFormatException e) {
-                return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+                return ResponseEntity.badRequest().body(Map.of("message","Thanh toán thất bại, thông tin không hợp lệ"));
             }
-
             hoaDon.setNgayTao(new Date());
             hoaDon.setDonViGiaoHang("Giao hàng tiết kiệm");
             hoaDon.setLoaiHoaDon(true);
             hoaDon.setLoaiThanhToan(false);
-            hoaDon.setTrangThai(10);
+            hoaDon.setTrangThai(2);
+            hoaDon.setGhiChu("Đơn hàng ngày "+new Date()+"đã thanh toán vnpay");
             hoaDonService.save(hoaDon);
-            khuyenMai.setDaSuDung(khuyenMai.getDaSuDung()+1);
-            khuyenMaiService.updateKhuyenMai(khuyenMai,khuyenMai.getId());
+            //cap nhat so luong khuyen mai da su dung sau khi lưu hóa đơn thành công
+            khuyenMai.setDaSuDung(khuyenMai.getDaSuDung() + 1);
+            khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
             // Lưu lịch sử trạng thái đơn hàng
             TrangThaiDonHang trangThaiDonHang = new TrangThaiDonHang();
-            trangThaiDonHang.setTrangThai(10);
+            trangThaiDonHang.setTrangThai(2);
             trangThaiDonHang.setGhiChu("Đã thanh toán VNPay - chờ xác nhận");
             trangThaiDonHang.setIdHoaDon(hoaDon);
             trangThaiDonHang.setNgayCapNhat(new Date());
             lichSuTrnngThaiService.saveLichSuTrangThai(trangThaiDonHang);
-
-            // Lấy danh sách sản phẩm
-            List<Integer> idCTGH = (List<Integer>) giaoDich.get("selectedItems");
-            if (idCTGH == null || idCTGH.isEmpty()) {
-                return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
-            }
-
-            for (Integer idGioHangChiTiet : idCTGH) {
-                GioHangChiTiet ghct = gioHangChiTietService.findById(idGioHangChiTiet);
-                if (ghct == null) {
-                    return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
-                }
-
+            for (GioHangChiTiet idGioHangChiTiet : lstGioHangChiTiet) {
                 // Kiểm tra số lượng sản phẩm trong kho
-                ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(ghct.getIdChiTietSanPham().getId());
+                ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findById(idGioHangChiTiet.getIdChiTietSanPham().getId());
                 if (chiTietSanPham == null) {
-                    return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+                    return ResponseEntity.badRequest().body(Map.of("message","Chi tiết sản phẩm trong giỏ hàng không tồn tại"));
                 }
-                if (chiTietSanPham.getSoLuong() < ghct.getSoLuong()) {
-                    return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+                if (chiTietSanPham.getSoLuong() < idGioHangChiTiet.getSoLuong()) {
+                    return ResponseEntity.badRequest().body(Map.of("message","Số lượng sản phẩm trong kho không đủ"));
                 }
 
                 // Tạo hóa đơn chi tiết
                 HoaDonChiTiet hoaDonChiTiet = new HoaDonChiTiet();
                 hoaDonChiTiet.setIdHoaDon(hoaDon);
-                hoaDonChiTiet.setSoLuong(ghct.getSoLuong());
-                hoaDonChiTiet.setIdChiTietSanPham(ghct.getIdChiTietSanPham());
-                hoaDonChiTiet.setTongTrongLuong(ghct.getTongTrongLuong());
-                hoaDonChiTiet.setDonGia(ghct.getDonGia());
+                hoaDonChiTiet.setSoLuong(idGioHangChiTiet.getSoLuong());
+                hoaDonChiTiet.setIdChiTietSanPham(idGioHangChiTiet.getIdChiTietSanPham());
+                hoaDonChiTiet.setTongTrongLuong(idGioHangChiTiet.getTongTrongLuong());
+                hoaDonChiTiet.setDonGia(idGioHangChiTiet.getDonGia());
                 hoaDonChiTiet.setNgayTao(new Date());
-                hoaDonChiTiet.setTrangThai(2);
+                hoaDonChiTiet.setTrangThai(1);
                 hoaDonChiTietService.saveHoaDonChiTiet(hoaDonChiTiet);
-
-                // Cập nhật số lượng sản phẩm trong kho
-                chiTietSanPham.setSoLuong(chiTietSanPham.getSoLuong() - ghct.getSoLuong());
-                chiTietSanPhamService.saveChiTietSanPham(chiTietSanPham);
-
                 // Xóa sản phẩm khỏi giỏ hàng
-                gioHangChiTietService.deleteGioHangChitiet(ghct.getId());
+                gioHangChiTietService.deleteGioHangChitiet(idGioHangChiTiet.getId());
             }
 
             // Xóa session sau khi giao dịch hoàn tất
             httpSession.removeAttribute("giaoDichTam");
             httpSession.removeAttribute("khachHangSession");
 
-            return new RedirectView("/gio-hang/checkout-success"); // Chuyển hướng trực tiếp
+            return ResponseEntity.ok().body(Map.of("message","Thanh toán thành công"));
         } else if (paymentStatus == 0) {
             //giao dich that bai
-            return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+            return ResponseEntity.badRequest().body(Map.of("message","Giao dịch thất bại"));
         } else {
             //Giao dich khong hop le
-            return new RedirectView("/gio-hang/checkout-failed"); // Chuyển hướng trực tiếp
+            return ResponseEntity.badRequest().body(Map.of("message","Giao dịch không hợp lệ"));
         }
     }
 
@@ -348,11 +376,17 @@ public class GioHangController {
         return "/user/sanpham/checkoutSuccess";
     }
 
+    @GetMapping("checkout-failed")
+    public String checkoutFailed() {
+        return "redirect:/gio-hang/thanh-toan";
+    }
+
     @PostMapping("/vnpay-payment")
     @ResponseBody
     public ResponseEntity<?> ThanhToanVNPay(@RequestBody Map<String, Object> sanPhamThanhToan,
                                             HttpServletRequest request) {
         KhachHang khachHangSession = khachHangService.findByEmail(getCurrentUserEmail());
+        GioHang gioHang = gioHangService.findGioHangByIDKH(khachHangSession.getId());
 
         // Kiểm tra đăng nhập
         if (khachHangSession == null) {
@@ -360,39 +394,77 @@ public class GioHangController {
         }
 
         try {
-            // Kiểm tra dữ liệu đầu vào
-            if (sanPhamThanhToan == null || !sanPhamThanhToan.containsKey("selectedItems")) {
+
+            if (sanPhamThanhToan.get("selectedIds") == null) {
                 return ResponseEntity.badRequest().body(Map.of("message", "Sản phẩm không hợp lệ"));
             }
+            Object selectedIdsRaw = sanPhamThanhToan.get("selectedIds");
 
-            // Lấy tổng tiền và kiểm tra lỗi ép kiểu
-            float tongTien = 0;
-            try {
-                tongTien = Float.parseFloat(String.valueOf(sanPhamThanhToan.get("tongTien")));
-            } catch (NumberFormatException e) {
-                return ResponseEntity.badRequest()
-                        .body(Map.of("message", "Dữ liệu không hợp lệ: tổng tiền không phải số"));
+            List<Integer> idGHCT = new ArrayList<>();
+
+            if (selectedIdsRaw instanceof List<?>) {
+                for (Object idObj : (List<?>) selectedIdsRaw) {
+                    try {
+                        idGHCT.add(Integer.parseInt(idObj.toString()));
+                    } catch (NumberFormatException e) {
+                        return ResponseEntity.badRequest().body(Map.of("message", "ID sản phẩm không hợp lệ"));
+                    }
+                }
+            } else {
+                return ResponseEntity.badRequest().body(Map.of("message", "Dữ liệu selectedIds không hợp lệ"));
             }
-
-            // Tính khuyến mãi
-            KhuyenMai khuyenMai = khuyenMaiService.findById(1);
-            float tongTienGiam = (khuyenMai != null && !khuyenMai.getLoaiKhuyenMai())
-                    ? (tongTien * khuyenMai.getGiaTriGiam()) / 100
-                    : (khuyenMai != null ? khuyenMai.getGiaTriGiam() : 0);
-
-            int thanhTien = (int) (tongTien - tongTienGiam);
+            List<GioHangChiTiet> lstGioHangChiTiet = new ArrayList<>();
+            for (Integer id : idGHCT) {
+                lstGioHangChiTiet.add(gioHangChiTietService.findById(id));
+            }
+            if (lstGioHangChiTiet.size() == 0) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Chưa chọn sản phẩm"));
+            }
+            boolean isChaged = false;
+            StringBuilder thayDoi = new StringBuilder();
+            for (GioHangChiTiet gh : lstGioHangChiTiet) {
+                if (Math.abs(gh.getIdChiTietSanPham().getGiaBan() - gh.getDonGia()) > 0.001f) {
+                    thayDoi.append("").append(gh.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
+                    isChaged = true;
+                }
+            }
+            if (isChaged) {
+                tinhLaiGiaTien(gioHang);
+            }
+            if (!thayDoi.toString().isBlank()) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Giá của " + thayDoi.toString() + " thay đổi", "load", true));
+            }
             String maHoaDon = hoaDonService.taoMaHoaDon();
+            float tongTien = (float) lstGioHangChiTiet.stream().filter(item -> item.getTrangThai()).mapToDouble(GioHangChiTiet::getTongTien).sum();
+            if (tongTien > 20000000) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Đơn hàng vượt quá 20 triệu"));
+            }
+            float tongTienGiam = 0;
+            KhuyenMai khuyenMai = null;
+
+            if (gioHang.getIdKhuyenMai() != null) {
+                khuyenMai = khuyenMaiService.findById(gioHang.getIdKhuyenMai().getId());
+                if (khuyenMai != null) {
+                    if (khuyenMai.getLoaiKhuyenMai()) { // Giảm giá theo số tiền
+                        tongTienGiam = khuyenMai.getGiaTriGiam();
+                    } else { // Giảm giá theo %
+                        double giamGiaPhanTram = (tongTien * khuyenMai.getGiaTriGiam()) / 100;
+                        tongTienGiam = (float) Math.min(giamGiaPhanTram, khuyenMai.getMucGiamGiaToiDa()); // Không vượt quá mức giảm tối đa
+                    }
+                }
+            }
+            int thanhTien = (int) ((int) tongTien - tongTienGiam);
             // Lưu tạm thông tin giao dịch vào session (hoặc Redis, DB nếu cần)
             Map<String, Object> giaoDichTam = new HashMap<>(sanPhamThanhToan);
             giaoDichTam.put("idKhachHang", khachHangSession.getId());
             giaoDichTam.put("maHoaDon", maHoaDon);
-            giaoDichTam.put("idKhuyenMai", khuyenMai.getId());
-            giaoDichTam.put("tongTienGiam", tongTienGiam);
             giaoDichTam.put("thanhTien", thanhTien);
+            giaoDichTam.put("tongTien", tongTien);
+            giaoDichTam.put("tongTienGiam", tongTienGiam);
+            giaoDichTam.put("lstGioHangChiTiet", lstGioHangChiTiet);
             httpSession.setAttribute("giaoDichTam", giaoDichTam);
             String orderInfo = URLEncoder.encode("Thanh toan don hang" + maHoaDon, StandardCharsets.UTF_8.toString());
             String baseUrl = request.getScheme() + "://" + request.getServerName() + ":" + request.getServerPort();
-
             // Tạo URL thanh toán
             String vnpayUrl = vnPay.createOrder(thanhTien, orderInfo, baseUrl, request);
             return ResponseEntity.ok(Map.of("redirectUrl", vnpayUrl));
@@ -404,27 +476,36 @@ public class GioHangController {
     }
 
     @GetMapping("/thanh-toan")
-    public String thanhToan(Model model) {
+    public String thanhToan(Model model, HttpServletResponse response) {
+        response.setHeader("Cache-Control", "no-cache, no-store, must-revalidate"); // HTTP 1.1
+        response.setHeader("Pragma", "no-cache"); // HTTP 1.0
+        response.setHeader("Expires", "0"); // Proxies
         KhachHang khachHangSessiong = khachHangService.findByEmail(getCurrentUserEmail());
         if (khachHangSessiong == null) {
             model.addAttribute("message", "Bạn chưa đăng nhập!");
             return "redirect:/dang-nhap";
         }
+
         GioHang gioHang = gioHangService.findGioHangByIDKH(khachHangSessiong.getId());
         if (gioHang == null) {
             model.addAttribute("message", "Giỏ hàng của bạn đang trống!");
             return "redirect:/Sneakers_Nice/hienthi";
         }
-        ArrayList<GioHangChiTiet> lstGioHangChiTiet = gioHangChiTietService.findByIdGioHang(gioHang.getId());
-        if (lstGioHangChiTiet == null || lstGioHangChiTiet.isEmpty()) {
-            model.addAttribute("message", "Giỏ hàng của bạn đang trống!");
+        tinhLaiGiaTien(gioHang);
+        ArrayList<GioHangChiTiet> lstGioHangChiTiet = new ArrayList<>();
+        ArrayList<GioHangChiTiet> lstGHCTALL = gioHangChiTietService.findByIdGioHang(gioHang.getId());
+        for (GioHangChiTiet gh : lstGHCTALL) {
+            if (gh.getTrangThai()) {
+                lstGioHangChiTiet.add(gh);
+            }
+        }
+        if (lstGioHangChiTiet == null || lstGioHangChiTiet.isEmpty()||lstGioHangChiTiet.size()==0) {
             return "redirect:/Sneakers_Nice/hienthi";
         }
-
         double tien = 0;
         for (GioHangChiTiet ghct : lstGioHangChiTiet
         ) {
-          tien += ghct.getTongTien();
+            tien += ghct.getDonGia() * ghct.getSoLuong();
         }
         double shippingFee = 65000; // Giả sử phí ship cố định
         double tongTien = tien + shippingFee;
@@ -432,112 +513,158 @@ public class GioHangController {
         List<KhuyenMai> filterKhuyenMai = lstKhuyenMai.stream()
                 .filter(Objects::nonNull) // Lọc các phần tử null
                 .sorted(Comparator.comparingDouble((KhuyenMai km) -> {
-                    if (km.getLoaiKhuyenMai()) { // Tránh lỗi null
-                        return  km.getGiaTriGiam() ;
+                    if (km.getLoaiKhuyenMai()) {
+                        return km.getGiaTriGiam();
                     } else {
-                        double giamTheoPhanTram =  km.getGiaTriGiam() * tongTien / 100;
-                        double mucGiamToiDa = km.getMucGiamGiaToiDa() ;
+                        double giamTheoPhanTram = km.getGiaTriGiam() * tongTien / 100;
+                        double mucGiamToiDa = km.getMucGiamGiaToiDa();
                         return Math.min(giamTheoPhanTram, mucGiamToiDa);
                     }
                 }).reversed())
                 .collect(Collectors.toList());
         float tongTienGiam;
-        if(filterKhuyenMai.isEmpty()){
-            tongTienGiam =0;
-        }else{
+        if (filterKhuyenMai.isEmpty()) {
+            tongTienGiam = 0;
+        } else {
             KhuyenMai km = filterKhuyenMai.get(0);
-            if(km!=null){
-                if(km.getLoaiKhuyenMai()){
+            if (km != null) {
+                if (km.getLoaiKhuyenMai()) {
                     tongTienGiam = km.getGiaTriGiam();
-                }else{
+                } else {
                     double t1 = km.getMucGiamGiaToiDa();
-                    double t2 = tongTien*km.getGiaTriGiam()/100;
-                    tongTienGiam =(float) Math.min(t1,t2);
+                    double t2 = tongTien * km.getGiaTriGiam() / 100;
+                    tongTienGiam = (long) Math.min(t1, t2);
                 }
-            }else{
+            } else {
                 tongTienGiam = 0;
             }
-
         }
-
         model.addAttribute("lstKhuyenMai", filterKhuyenMai);
         model.addAttribute("giamGia", tongTienGiam);
         model.addAttribute("khachHang", khachHangSessiong);
         model.addAttribute("shippingFee", shippingFee);
-        System.out.println((int)tongTien);
         model.addAttribute("totalPrice", tongTien);
         model.addAttribute("lstGioHangChiTiet", lstGioHangChiTiet);
         return "/user/sanpham/checkout";
     }
+
     @GetMapping("/changeChoice")
     @ResponseBody
-    public ResponseEntity<?> changeChoice(@RequestParam("tongTien") int tongTien, Model model){
-            List<KhuyenMai> lstKhuyenMai = khuyenMaiService.getKhuyenMaiByDieuKienGiam((float) tongTien);
-            List<KhuyenMai> filterKhuyenMai = lstKhuyenMai.stream()
-                    .filter(Objects::nonNull) // Lọc các phần tử null
-                    .sorted(Comparator.comparingDouble((KhuyenMai km) -> {
-                        if (km.getLoaiKhuyenMai()) { // Tránh lỗi null
-                            return  km.getGiaTriGiam() ;
-                        } else {
-                            double giamTheoPhanTram =  km.getGiaTriGiam() * tongTien / 100;
-                            double mucGiamToiDa = km.getMucGiamGiaToiDa() ;
-                            return Math.min(giamTheoPhanTram, mucGiamToiDa);
-                        }
-                    }).reversed())
-                    .collect(Collectors.toList());
-            float tongTienGiam;
-
-            if(filterKhuyenMai.isEmpty()){
-                tongTienGiam =0;
-            }else{
-
-                KhuyenMai km = filterKhuyenMai.get(0);
-                if(km!=null){
-                    if(km.getLoaiKhuyenMai()){
-                        tongTienGiam = km.getGiaTriGiam();
-                    }else{
-                        double t1 = km.getMucGiamGiaToiDa();
-                        double t2 = tongTien*km.getGiaTriGiam()/100;
-                        tongTienGiam =(float) Math.min(t1,t2);
+    public ResponseEntity<?> changeChoice(@RequestParam("tongTien") int tongTien, Model model) {
+        List<KhuyenMai> lstKhuyenMai = khuyenMaiService.getKhuyenMaiByDieuKienGiam((float) tongTien);
+        List<KhuyenMai> filterKhuyenMai = lstKhuyenMai.stream()
+                .filter(Objects::nonNull) // Lọc các phần tử null
+                .sorted(Comparator.comparingDouble((KhuyenMai km) -> {
+                    if (km.getLoaiKhuyenMai()) { // Tránh lỗi null
+                        return km.getGiaTriGiam();
+                    } else {
+                        double giamTheoPhanTram = km.getGiaTriGiam() * tongTien / 100;
+                        double mucGiamToiDa = km.getMucGiamGiaToiDa();
+                        return Math.min(giamTheoPhanTram, mucGiamToiDa);
                     }
-                }else{
-                    tongTienGiam = 0;
+                }).reversed())
+                .collect(Collectors.toList());
+        float tongTienGiam;
+        if (filterKhuyenMai.isEmpty()) {
+            tongTienGiam = 0;
+        } else {
+            KhuyenMai km = filterKhuyenMai.get(0);
+            if (km != null) {
+                if (km.getLoaiKhuyenMai()) {
+                    tongTienGiam = km.getGiaTriGiam();
+                } else {
+                    double t1 = km.getMucGiamGiaToiDa();
+                    double t2 = tongTien * km.getGiaTriGiam() / 100;
+                    tongTienGiam = (float) Math.min(t1, t2);
                 }
-
+            } else {
+                tongTienGiam = 0;
             }
+
+        }
         model.addAttribute("lstKhuyenMai", filterKhuyenMai);
         return ResponseEntity.ok(Map.of(
                 "tongTienGiam", tongTienGiam,
                 "filterKhuyenMai", filterKhuyenMai
         ));
     }
+
     @PostMapping("/addVoucher")
     @ResponseBody
-    public ResponseEntity<?> addVoucher(@RequestBody Map<String,String> Object ){
-        KhuyenMai khuyenMai = khuyenMaiService.findById(Integer.parseInt(String.valueOf(Object.get("idKhuyenMai"))));
-        if(khuyenMai==null){
-            return ResponseEntity.badRequest().body(Map.of("message","Mã khuyến mãi đã hết"));
+    public ResponseEntity<?> addVoucher(@RequestBody Map<String, Object> Object) {
+        if (Object == null) {
+            return ResponseEntity.badRequest().body("Voucher is null");
         }
-        try{
-            float tongTien = Float.parseFloat(Object.get("tongTien").toString());
-            float tongTienGiam;
-            if(khuyenMai.getLoaiKhuyenMai()){
-                tongTienGiam = khuyenMai.getGiaTriGiam();
-            }else{
-                double t1 = khuyenMai.getMucGiamGiaToiDa();
-                double t2 = tongTien*khuyenMai.getGiaTriGiam()/100;
-                tongTienGiam =(float) Math.min(t1,t2);
+        if (Object.get("selectedIds") == null) {
+            return ResponseEntity.badRequest().body("Chưa có sản phẩm được chọn");
+        }
+        KhuyenMai khuyenMai = khuyenMaiService.findById(Integer.parseInt(String.valueOf(Object.get("idKhuyenMai"))));
+        if (khuyenMai == null) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Mã khuyến mãi đã hết"));
+        } else if (khuyenMai.getNgayKetThuc().before(new Date())) {
+            khuyenMai.setTrangThai(false);
+            khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
+            return ResponseEntity.ok(Map.of("message", "Khuyến mãi không còn hoạt động"));
+        } else if (!khuyenMai.getTrangThai() || khuyenMai.getSoLuong() - khuyenMai.getDaSuDung() <= 0) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Khuyến mãi không còn hoạt động"));
+        }
+        GioHang gioHang = gioHangService.findGioHangByIDKH(khachHangService.findByEmail(getCurrentUserEmail()).getId());
+        // Lấy danh sách sản phẩm
+        List<GioHangChiTiet> lstGioHangChiTiet = gioHangChiTietService.findByIdGioHang(gioHang.getId())
+                .stream()
+                .filter(item -> item.getTrangThai())
+                .collect(Collectors.toList());
+        boolean isChaged = false;
+        StringBuilder thayDoi = new StringBuilder();
+        for (GioHangChiTiet gh : lstGioHangChiTiet) {
+            if (Math.abs(gh.getIdChiTietSanPham().getGiaBan() - gh.getDonGia()) > 0.001f) {
+                thayDoi.append("").append(gh.getIdChiTietSanPham().getIdSanPham().getTenSanPham());
+                isChaged = true;
+            } else if (!gh.getTrangThai() || !gh.getIdChiTietSanPham().getTrangThai() || !gh.getIdChiTietSanPham().getIdSanPham().getTrangThai()) {
+                thayDoi.append("").append(gh.getIdChiTietSanPham().getIdSanPham().getTenSanPham()
+                );
             }
-            GioHang gioHang = gioHangService.findGioHangByIDKH(khachHangService.findByEmail(getCurrentUserEmail()).getId());
+        }
+        if (isChaged) {
+            tinhLaiGiaTien(gioHang);
+        }
+        if (!thayDoi.toString().isBlank()) {
+            return ResponseEntity.badRequest().body(Map.of("message", "Giá" + thayDoi.toString() + " thay đổi hoặc sản phẩm ngừng bán", "load", true));
+        }
+        try {
+            List<?> rawList = (List<?>) Object.get("selectedIds");
+            List<Integer> lstIdProductsChoice = rawList.stream()
+                    .map(id -> Integer.parseInt(String.valueOf(id)))
+                    .collect(Collectors.toList());
+            float tongTienSanPhamDaChon = 0;
+            for (Integer id : lstIdProductsChoice) {
+                GioHangChiTiet gioHangChiTiet = gioHangChiTietService.findById(id);
+                tongTienSanPhamDaChon += gioHangChiTiet.getTongTien();
+            }
+            if (tongTienSanPhamDaChon < khuyenMai.getDieuKienApDung()) {
+                return ResponseEntity.badRequest().body(Map.of("message", "Đơn hàng của bạn không đủ điểu kiện"));
+            }
+            if (gioHang.getIdKhuyenMai().getId() == khuyenMai.getId()) {
+                return ResponseEntity.ok().body(Map.of("message", "Đã áp dụng mã khuyến mãi"));
+            }
+            float tongTienGiam;
+            if (khuyenMai.getLoaiKhuyenMai()) {
+                tongTienGiam = khuyenMai.getGiaTriGiam();
+            } else {
+                double t1 = khuyenMai.getMucGiamGiaToiDa();
+                //bổ sung thêm phí ship
+                double t2 = (tongTienSanPhamDaChon) * khuyenMai.getGiaTriGiam() / 100;
+                tongTienGiam = (float) Math.min(t1, t2);
+            }
             gioHang.setIdKhuyenMai(khuyenMai);
             gioHangService.save(gioHang);
-            return ResponseEntity.ok(Map.of("tongTienGiam",tongTienGiam));
-
-        }catch (Exception e){
-             e.printStackTrace();
+            return ResponseEntity.ok(Map.of("tongTienGiam", tongTienGiam));
+        } catch (Exception e) {
+            e.printStackTrace();
         }
-      return ResponseEntity.badRequest().body(Map.of("message","Lỗi khi dùng voucher"));
+        return ResponseEntity.badRequest().body(Map.of("message", "Lỗi khi dùng voucher"));
     }
+
     @GetMapping()
     @ResponseBody
     public ResponseEntity<Map<String, Object>> getGioHang(Model model) {
@@ -549,12 +676,11 @@ public class GioHangController {
         if (gioHang == null) {
             return ResponseEntity.ok(Map.of("items", new ArrayList<>(), "totalPrice", 0));
         }
-
+        tinhLaiGiaTien(gioHang);
         List<GioHangChiTiet> lstGioHangChiTiet = gioHangChiTietService.findByIdGioHang(gioHang.getId());
         if (lstGioHangChiTiet == null || lstGioHangChiTiet.isEmpty()) {
             return ResponseEntity.ok(Map.of("items", new ArrayList<>(), "totalPrice", 0));
         }
-
         List<Map<String, Object>> items = lstGioHangChiTiet.stream()
                 .filter(Objects::nonNull) // Bỏ qua các phần tử null
                 .map(ghct -> {
@@ -562,11 +688,7 @@ public class GioHangController {
                     ChiTietSanPham chiTietSanPham = ghct.getIdChiTietSanPham();
                     if (chiTietSanPham == null) return map; // Trả về Map rỗng nếu dữ liệu bị thiếu
                     boolean isOutOfStock = chiTietSanPham.getSoLuong() < ghct.getSoLuong() && chiTietSanPham.getSoLuong() > 0;
-                    if (isOutOfStock) {
-                        ghct.setSoLuong(chiTietSanPham.getSoLuong());
-                        gioHangChiTietService.saveGioHangChitiet(ghct);
-                    }
-                    boolean hetHang = chiTietSanPham.getSoLuong() < 0;
+                    boolean hetHang = chiTietSanPham.getSoLuong() <= 0;
                     map.put("tenSanPham", Optional.ofNullable(ghct.getIdChiTietSanPham().getIdSanPham())
                             .map(SanPham::getTenSanPham).orElse("N/A"));
                     map.put("mauSac", Optional.ofNullable(ghct.getIdChiTietSanPham().getIdMauSac())
@@ -576,18 +698,18 @@ public class GioHangController {
                     map.put("gia", Optional.ofNullable(ghct.getIdChiTietSanPham().getGiaBan()).orElse(0f));
                     map.put("idGioHangChiTiet", ghct.getId());
                     map.put("soLuong", Optional.ofNullable(ghct.getSoLuong()).orElse(0));
+                    map.put("tongTien", Optional.ofNullable(ghct.getTongTien()).orElse(0f));
                     map.put("hinhAnh", Optional.ofNullable(ghct.getIdChiTietSanPham().getHinhAnh())
                             .orElse("Không có ảnh"));
                     map.put("isOutOfStock", hetHang); // Cờ báo hết hàng
+                    map.put("checkSP", !chiTietSanPham.getTrangThai() || !chiTietSanPham.getIdSanPham().getTrangThai());
                     return map;
                 })
                 .collect(Collectors.toList());
-
         double totalPrice = items.stream()
                 .filter(i -> !(boolean) i.get("isOutOfStock")) // Chỉ tính tiền cho sản phẩm còn hàng
                 .mapToDouble(i -> ((Number) i.get("gia")).doubleValue() * ((Number) i.get("soLuong")).intValue())
                 .sum();
-
         return ResponseEntity.ok(Map.of("items", items, "totalPrice", totalPrice));
     }
 
@@ -614,6 +736,10 @@ public class GioHangController {
 
     @PostMapping("/them-vao-gio-hang")
     public ResponseEntity<?> themSanPhamVaoGioHang(@RequestBody Map<String, Object> sanPhamChon) {
+        if (getCurrentUserEmail().equals("anonymousUser")) {
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED)
+                    .body(Map.of("message", "Bạn cần đăng nhập để mua sắm"));
+        }
         KhachHang khachHang = khachHangService.findByEmail(getCurrentUserEmail());
         if (khachHang != null) {
             try {
@@ -623,7 +749,6 @@ public class GioHangController {
                 int idMauSac = converToInt(sanPhamChon.get("idMauSac"));
                 ChiTietSanPham chiTietSanPham = chiTietSanPhamService.findCTSPByIdSPAndIdMauSacAndIdSize(idSanPham,
                         idSize, idMauSac);
-
                 if (chiTietSanPham == null) {
                     return ResponseEntity.badRequest()
                             .body(Collections.singletonMap("message", "Sản phẩm không còn hoạt động"));
@@ -631,14 +756,27 @@ public class GioHangController {
                     return ResponseEntity.badRequest()
                             .body(Collections.singletonMap("message", "Sản phẩm đã hết hàng"));
                 } else if (chiTietSanPham.getSoLuong() < soLuong) {
-                    return ResponseEntity.badRequest()
-                            .body(Collections.singletonMap("message", "Sản phẩm trong kho không đủ"));
+                    return ResponseEntity.badRequest().body(
+                            Map.of("message", "Sản phẩm trong kho không đủ")
+                    );
+                } else if (!chiTietSanPham.getTrangThai() || !chiTietSanPham.getIdSanPham().getTrangThai()) {
+                    return ResponseEntity.badRequest().body(
+                            Map.of("message", "Sản phẩm đã ngừng bán")
+                    );
                 }
                 GioHangChiTiet ghct = gioHangChiTietService.findByIdGioHangAndIDCTSP(
                         gioHangService.findGioHangByIDKH(khachHang.getId()).getId(), chiTietSanPham.getId());
                 if (ghct != null) {
                     int tongSoLuongSanPhamTrongGioHang = ghct.getSoLuong() + soLuong;
                     if (tongSoLuongSanPhamTrongGioHang > chiTietSanPham.getSoLuong()) {
+                        boolean sameProduct = chiTietSanPham.getId() == ghct.getIdChiTietSanPham().getId();
+                        boolean isAvailable = chiTietSanPham.getTrangThai() && ghct.getTrangThai();
+                        boolean quantityMatch = ghct.getSoLuong() == chiTietSanPham.getSoLuong() && ghct.getSoLuong() > 0;
+                        if (sameProduct && isAvailable && quantityMatch) {
+                            return ResponseEntity.ok().body(
+                                    Map.of("message", "Đã toàn bộ sản phẩm trong giỏ hàng", "check", true)
+                            );
+                        }
                         return ResponseEntity.badRequest()
                                 .body(Collections.singletonMap("message", "Số lượng sản phẩm trong kho không đủ"));
                     }
@@ -646,56 +784,58 @@ public class GioHangController {
                     ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(ghct.getIdGioHang().getId());
                     for (GioHangChiTiet gh : lstGHCT
                     ) {
-                        tongTien += gh.getTongTien();
+                        if (gh.getTrangThai()) {
+                            tongTien += gh.getTongTien();
+                        }
+                    }
+                    if (tongTien + chiTietSanPham.getGiaBan() * soLuong > 20000000) {
+                        return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu vui lòng liên hệ để được hỗ trợ"));
+                    }
+                    ghct.setSoLuong(ghct.getSoLuong() + soLuong);
+                    ghct.setTongTrongLuong((int) chiTietSanPham.getTrongLuong() * ghct.getSoLuong());
+                    ghct.setTongTien(ghct.getDonGia() * ghct.getSoLuong());
+                    gioHangChiTietService.saveGioHangChitiet(ghct);
+                    return ResponseEntity.ok()
+                            .body(Collections.singletonMap("Thêm sản phẩm vào giỏ hàng thành công", true));
                 }
-
-                if (tongTien + chiTietSanPham.getGiaBan() * soLuong > 20000000) {
-                    return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu vui lòng liên hệ để được hỗ trợ"));
-                }
-                ghct.setSoLuong(ghct.getSoLuong() + soLuong);
-                ghct.setTongTrongLuong((int)chiTietSanPham.getTrongLuong()*ghct.getSoLuong());
-                ghct.setTongTien(ghct.getDonGia()*ghct.getSoLuong());
-                gioHangChiTietService.saveGioHangChitiet(ghct);
-                return ResponseEntity.ok()
-                        .body(Collections.singletonMap("Thêm sản phẩm vào giỏ hàng thành công", true));
-            }
-                float tongTien = chiTietSanPham.getGiaBan()*soLuong;
+                float tongTien = chiTietSanPham.getGiaBan() * soLuong;
                 ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(gioHangService.findGioHangByIDKH(khachHang.getId()).getId());
-                if(lstGHCT!=null) {
+                if (lstGHCT != null) {
                     for (GioHangChiTiet gh : lstGHCT
                     ) {
-                        tongTien += gh.getTongTien();
+                        if (gh.getTrangThai()) {
+                            tongTien += gh.getTongTien();
+                        }
                     }
                     if (tongTien > 20000000) {
                         return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu vui lòng liên hệ để được hỗ trợ"));
                     }
                 }
-            GioHangChiTiet gioHangChiTiet = new GioHangChiTiet();
-            gioHangChiTiet.setIdGioHang(gioHangService.findGioHangByIDKH(khachHang.getId()));
-            gioHangChiTiet.setIdChiTietSanPham(chiTietSanPham);
-            gioHangChiTiet.setSoLuong(soLuong);
-            gioHangChiTiet.setDonGia(chiTietSanPham.getGiaBan());
-            gioHangChiTiet.setTongTien(gioHangChiTiet.getDonGia() * soLuong);
-            gioHangChiTiet.setTongTrongLuong(chiTietSanPham.getSoLuong() * chiTietSanPham.getSoLuong());
-            gioHangChiTiet.setNgayTao(new Date());
-            gioHangChiTiet.setTrangThai(true);
-            gioHangChiTietService.saveGioHangChitiet(gioHangChiTiet);
-            return ResponseEntity.ok(Collections.singletonMap("Thêm sản phẩm vào giỏ hàng thành công", true));
+                GioHangChiTiet gioHangChiTiet = new GioHangChiTiet();
+                gioHangChiTiet.setIdGioHang(gioHangService.findGioHangByIDKH(khachHang.getId()));
+                gioHangChiTiet.setIdChiTietSanPham(chiTietSanPham);
+                gioHangChiTiet.setSoLuong(soLuong);
+                gioHangChiTiet.setDonGia(chiTietSanPham.getGiaBan());
+                gioHangChiTiet.setTongTien(gioHangChiTiet.getDonGia() * soLuong);
+                gioHangChiTiet.setTongTrongLuong(chiTietSanPham.getSoLuong() * chiTietSanPham.getSoLuong());
+                gioHangChiTiet.setNgayTao(new Date());
+                gioHangChiTiet.setTrangThai(true);
+                gioHangChiTietService.saveGioHangChitiet(gioHangChiTiet);
+                return ResponseEntity.ok(Collections.singletonMap("Thêm sản phẩm vào giỏ hàng thành công", true));
 
-        } catch(Exception e){
-            e.printStackTrace();
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Collections.singletonMap("message", "Lỗi khi cập nhật sản phẩm!"));
+            } catch (Exception e) {
+                e.printStackTrace();
+                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                        .body(Collections.singletonMap("message", "Lỗi khi cập nhật sản phẩm!"));
+            }
+        } else {
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(Map.of("message", "Bạn cần đăng nhập để mua sắm"));
         }
-    } else {
-        return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(Map.of("message", "Bạn cần đăng nhập để mua sắm"));
-    }
 
-}
+    }
 
     @DeleteMapping("/remove/{id}")
     public ResponseEntity<?> removeSanPham(@PathVariable int id) {
-
         gioHangChiTietService.deleteGioHangChitiet(id);
         return ResponseEntity.ok(Collections.singletonMap("message", "Xóa sản phẩm thành công"));
     }
@@ -704,15 +844,48 @@ public class GioHangController {
     public ResponseEntity<?> capNhatSoLuongGioHang(@PathVariable int idGHCT, @RequestParam int soLuong) {
         GioHangChiTiet gioHangChiTiet = gioHangChiTietService.findById(idGHCT);
         if (gioHangChiTiet != null) {
+            ArrayList<GioHangChiTiet> lstGHCT = new ArrayList<>();
+            ArrayList<GioHangChiTiet> lstGHALL = gioHangChiTietService.findByIdGioHang(gioHangChiTiet.getIdGioHang().getId());
+            for (GioHangChiTiet gh : lstGHALL) {
+                if (gh.getTrangThai()) {
+                    lstGHCT.add(gh);
+                }
+            }
+            if (soLuong < 1) {
+                return ResponseEntity.badRequest()
+                        .body(Collections.singletonMap("message", "Số lượng sản phẩm phải lớn hơn 0"));
+            }
             ChiTietSanPham chiTietSanPham = chiTietSanPhamService
                     .findById(gioHangChiTiet.getIdChiTietSanPham().getId());
-            if (chiTietSanPham.getSoLuong() < soLuong) {
+            if (!chiTietSanPham.getTrangThai() || !chiTietSanPham.getIdSanPham().getTrangThai()) {
+                return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Sản phẩm không còn hoạt động"));
+            } else if (chiTietSanPham.getSoLuong() < soLuong) {
                 return ResponseEntity.badRequest()
                         .body(Collections.singletonMap("message", "Số lượng sản phẩm trong kho không đủ"));
-            } else if (chiTietSanPham.getGiaBan() * soLuong > 20000000) {
+            } else if (gioHangChiTiet.getDonGia() * soLuong > 20000000) {
                 return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu, liên hệ để được hỗ trợ"));
             } else {
+                int tongTienGioHang = 0;
+                for (GioHangChiTiet gh : lstGHCT) {
+                    if (gh.getIdChiTietSanPham().getGiaBan() != gh.getDonGia()) {
+                        String sanPhamThayDoiGia = "Giá bán của " + gh.getIdChiTietSanPham().getIdSanPham().getTenSanPham() + " thay đổi";
+                        gh.setDonGia(gh.getIdChiTietSanPham().getGiaBan());
+                        gioHangChiTietService.saveGioHangChitiet(gh);
+                        return ResponseEntity.badRequest().body(Map.of("message", sanPhamThayDoiGia));
+                    }
+                    if (gh.getId() == idGHCT && gh.getTrangThai()) {
+                        tongTienGioHang += gh.getDonGia() * soLuong;
+                    } else {
+                        if (gh.getTrangThai()) {
+                            tongTienGioHang += gh.getTongTien();
+                        }
+                    }
+                }
+                if (tongTienGioHang > 20000000) {
+                    return ResponseEntity.badRequest().body(Collections.singletonMap("message", "Đơn hàng vượt quá 20 triệu"));
+                }
                 gioHangChiTiet.setSoLuong(soLuong);
+                gioHangChiTiet.setTongTien(gioHangChiTiet.getIdChiTietSanPham().getGiaBan() * soLuong);
                 gioHangChiTietService.saveGioHangChitiet(gioHangChiTiet);
                 return ResponseEntity.ok(Collections.singletonMap("success", true));
             }
@@ -726,5 +899,50 @@ public class GioHangController {
             return (Integer) object;
         }
         return Integer.parseInt(object.toString());
+    }
+
+    private void tinhLaiGiaTien(GioHang gioHang) {
+        if (gioHang != null) {
+            ArrayList<GioHangChiTiet> lstGHCT = gioHangChiTietService.findByIdGioHang(gioHang.getId());
+            for (GioHangChiTiet gioHangChiTiet : lstGHCT) {
+                if (gioHangChiTiet.getSoLuong() <= 0) {
+                    gioHangChiTietService.deleteGioHangChitiet(gioHangChiTiet.getId());
+                    continue;
+                } else if (gioHangChiTiet.getSoLuong() >= gioHangChiTiet.getIdChiTietSanPham().getSoLuong()) {
+                    if (gioHangChiTiet.getIdChiTietSanPham().getSoLuong() > 0 && gioHangChiTiet.getIdChiTietSanPham().getTrangThai() && gioHangChiTiet.getIdChiTietSanPham().getIdSanPham().getTrangThai()) {
+                        gioHangChiTiet.setTrangThai(true);
+                        gioHang.setNgaySua(new Date());
+                        gioHangChiTiet.setSoLuong(Math.min(gioHangChiTiet.getSoLuong(), gioHangChiTiet.getIdChiTietSanPham().getSoLuong()));
+                    } else {
+                        gioHangChiTiet.setTrangThai(false);
+                    }
+                } else if (gioHangChiTiet.getTongTrongLuong()!=gioHangChiTiet.getIdChiTietSanPham().getTrongLuong()*gioHangChiTiet.getSoLuong()) {
+                    gioHangChiTiet.setTongTrongLuong((int)gioHangChiTiet.getIdChiTietSanPham().getTrongLuong()*gioHangChiTiet.getSoLuong());
+                }
+                gioHangChiTiet.setDonGia(gioHangChiTiet.getIdChiTietSanPham().getGiaBan());
+                gioHangChiTiet.setTongTien(gioHangChiTiet.getDonGia() * gioHangChiTiet.getSoLuong());
+                gioHangChiTietService.saveGioHangChitiet(gioHangChiTiet);
+            }
+        }
+
+    }
+
+    //kiểm tra xem khuyến mãi còn hoạt động không
+    private int checkKhuyenMai(KhuyenMai khuyenMai) {
+        if (khuyenMai != null) {
+            if (!khuyenMai.getTrangThai() || khuyenMai.getNgayKetThuc().before(new Date())) {
+                if (khuyenMai.getNgayKetThuc().before(new Date())) {
+                    //nếu khuyến mãi đã hết hạn sử dụng sẽ chuyeern trạng thái
+                    khuyenMai.setTrangThai(false);
+                    khuyenMai.setNgaySua(new Date());
+                    khuyenMaiService.updateKhuyenMai(khuyenMai, khuyenMai.getId());
+                }
+                return 1;
+            } else if (khuyenMai.getSoLuong() - khuyenMai.getDaSuDung() <= 0) {
+                return 2;
+            }
+            return 3;
+        }
+        return 4;
     }
 }
